# Copyright (c) 2014 The Native Client Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("hello_world") {
  sources = [
    "hello_world.c",
  ]
  deps = [
    "//build/config/nacl:nacl_base",
  ]

  # TODO(fabiansommer): Remove with next build deps roll
  if (is_linux && current_cpu == "x86") {
    ldflags = [ "-static-libstdc++" ]
  }
}
